force-app/main/default/objects/Case/fields/osf_cc_product__c.field-meta.xml
<CustomField>
    <fullName>osf_cc_product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>