force-app/main/default/objects/Case/fields/osf_company__c.field-meta.xml
<CustomField>
    <fullName>osf_company__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>