force-app/main/default/objects/Case/fields/osf_email__c.field-meta.xml
<CustomField>
    <fullName>osf_email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>