force-app/main/default/objects/Case/fields/osf_is_guest_user__c.field-meta.xml
<CustomField>
    <fullName>osf_is_guest_user__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Guest User</label>
    <type>Checkbox</type>
</CustomField>