force-app/main/default/objects/Case/fields/osf_name__c.field-meta.xml
<CustomField>
    <fullName>osf_name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>