force-app/main/default/objects/Case/fields/osf_phone__c.field-meta.xml
<CustomField>
    <fullName>osf_phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>