force-app/main/default/objects/Case/fields/SFCC_Order_No__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Order_No__c</fullName>
    <description>This field holds Salesforce Commerce Cloud Order No. This is optional field</description>
    <inlineHelpText>This field holds Salesforce Commerce Cloud Order No. This is optional field</inlineHelpText>
    <label>SFCC Order No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>