force-app/main/default/objects/Case/recordTypes/Contact_Us.recordType-meta.xml
<RecordType>
    <fullName>Contact_Us</fullName>
    <active>true</active>
    <businessProcess>SCC_Support</businessProcess>
    <label>Contact Us</label>
</RecordType>