force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>osf_name__c</columns>
    <columns>osf_email__c</columns>
    <columns>osf_phone__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>osf_cc_product__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Open Cases</label>
</ListView>